# competitive-programming

./: .gitignore  CMakeLists.txt  clean.py  in.in  mergesort.c  run.sh  test.cpp  to_upsolve.txt  upsolve.txt
AP/: AP1.c  AP4.cpp  AP9.cpp  List.h  ap1.cpp  ap2__1.cpp  ap2__2.cpp  ap3.cpp
CODEFORCES/: 129B.cpp  131C.cpp  158B.cpp  1904A.cpp  1950G.cpp  1981B.cpp  1985E.cpp  1986C.cpp  1A.cpp  228A.cpp  294A.cpp  344A.cpp  371C.cpp  469A.cpp  584A.cpp  686A.cpp  731A.cpp  766B.cpp
CP/: ATC-ABC204B Nuts.cpp  CF102B.cpp  CF112D2A.cpp  CF136D2A.cpp  CF160A.cpp  CF1612C.cpp  CF16B.cpp  CF208A.cpp  CF227B.cpp  CF263D2A.cpp  CF265D2A.cpp  CF266D2A.cpp  CF339D2A.cpp  CF363B.cpp  CF404A.cpp  CF405D2A.cpp  CF431D2A.cpp  CF433B.cpp  CF43A.cpp  CF443D2A.cpp  CF463B.cpp  CF47B.cpp  CF486A.cpp  CF490D2A.cpp  CF520A.cpp  CF567D2A-2.cpp  CF59D2A.cpp  CF688B.cpp  CF6B.cpp  CF734D2A.cpp  CF766D2A.cpp  CF767A.cpp  CF785A.cpp  CF78B.cpp  CF791D2A.cpp  CF799D2A.cpp  CSES1085.cpp  CSES1161 Stick Divisions.cpp  CSES2422.cpp  TIMUS1607.cpp  (+1 more)
EP/: Banco.cpp  Concurso.cpp  Concurso_cpp.cpp  Hash6-6-24.cpp
H7/: A.py  B.py  L.py
LC/: 1768 - Merge Strings Alternately.cpp  28 - Find the Index of the First Occurrence in a String.cpp  283 - Move Zeroes.cpp
LE/: 1_CF624428A.cpp  2_CF624428B.cpp  A - Contestants Ranking.cpp  B - Add All.cpp  B - Driving Range.cpp  B - Topological Sort.cpp  Broken_Keyboard_L2.cpp  Traverse Tree.cpp  ep.cpp  frog_jumps.cpp  knapsack.cpp  making_jumps.cpp  quais_moedas.cpp
SPOJ/: 1.cpp  15.cpp  2.cpp  3.cpp  in.in  out.out
Special/: matching_brackets.cpp
(+321 files in other folders)
